cursive-bootstrap/tests/ui/E-MEM/E-MEM-3003.cursive
// RUN: compile-fail
// DIAG: E-MEM-3003
// SPEC: 5.2.4
// DESC: Reassignment of immutable binding

public procedure main(move ctx: Context) -> i32 {
    let x: i32 = 42
    x = 10  //~ ERROR E-MEM-3003: reassignment of immutable
    return x
}
